@@ -70,6 +70,7 @@ foreach my $p (@ports) {
 		else {
 			next;
 			}
+		$rd->{'id'} = $al->{'name'}."_".$rd->{'path'};
 
 		my ($already) = grep { $_->{'path'} eq $rd->{'path'} } @rv;
 		if ($already) {
@@ -185,6 +186,31 @@ elsif ($d->{'parent'}) {
 else {
 	return $d->{'home'};
 	}
+}
+
+# add_wellknown_redirect(&redir)
+# If a redirect is for everything, modify it to be for a regexp that skips
+# .well-known
+sub add_wellknown_redirect
+{
+my ($redir) = @_;
+if ($redir->{'path'} eq '/' && !$redir->{'alias'} && !$redir->{'regexp'}) {
+	$redir->{'path'} = '^/(?!.well-known)';
+	$redir->{'regexp'} = 1;
+	}
+return $redir;
+}
+
+# remove_wellknown_redirect(&redir)
+# If a redirect is for everything except .well-known, modify it to be for just /
+sub remove_wellknown_redirect
+{
+my ($redir) = @_;
+if ($redir->{'path'} eq '^/(?!.well-known)' && !$redir->{'alias'} && $redir->{'regexp'}) {
+	$redir->{'path'} = '/';
+	$redir->{'regexp'} = 0;
+	}
+return $redir;
 }
 
 1;
