@@ -1584,3 +1584,4 @@ Backups from cPanel, Plesk and other control panels can now be migrated even whe
 Removed support for PHP 4.
 Before a DNS zone is updated, BIND will be told to freeze it and thaw afterwards. This ensures that dynamic updates are preserved.
 Dovecot and Postfix per-IP SSL certificate setup can now be configured on a per-template basis.
+Redirects for / created using the UI are automatically adjusted to exclude Let's Encrypt validation paths.
